@@ -4,7 +4,9 @@ Version 6.4.1
 - Fixed `-x` option in flexcc
 - Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
 - Fixed missing mbrtowc implementation
+- Implemented new Spin2 REPEAT n : i syntax (thanks, Ada!)
 - Made _geterror() clear the error number
+- Allow & operator for string concatenation in BASIC
 - Re-factored some code to reduce bloat a bit
 
 Version 6.4.0
